@@ -1,3 +1,8 @@
+Wed Oct 19 17:02:15 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_insnhelper.c (vm_call_opt_send): enable refinements with
+	  Kernel#send and BasicObject#__send__.  [Feature #11476]
+
 Wed Oct 19 14:22:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* basictest/runner.rb: do not clobber the option by --run-opt with
